Created Interface Manager

--- a/Paladin CSGO/Paladin CSGO.vcxproj.filters
+++ b/Paladin CSGO/Paladin CSGO.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="CSGO Source\Application\global.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CSGO Source\Application\interface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSGO Source\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CSGO Source\Application\global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CSGO Source\Application\interface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
