--- a/Paladin CSGO/Paladin CSGO.vcxproj
+++ b/Paladin CSGO/Paladin CSGO.vcxproj
@@ -143,10 +143,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CSGO Source\Application\global.cpp" />
+    <ClCompile Include="CSGO Source\Application\interface.cpp" />
     <ClCompile Include="CSGO Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSGO Source\Application\global.h" />
+    <ClInclude Include="CSGO Source\Application\interface.h" />
     <ClInclude Include="CSGO Source\main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
