--- a/Paladin Loader/Paladin Loader.vcxproj.filters
+++ b/Paladin Loader/Paladin Loader.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Loader Source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Loader Source\Application\menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Loader Source\Application\global.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Loader Source\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Loader Source\Application\menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
