--- a/Paladin Injector/Paladin Injector.vcxproj.filters
+++ b/Paladin Injector/Paladin Injector.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="Injector Source\Application\global.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Injector Source\Application\helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Injector Source\Application\inject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Injector Source\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Injector Source\Application\global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Injector Source\Application\helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Injector Source\Application\inject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
