Debug works on injector
Added old debug cl[B-1]ss to program, fix injector to work with unicode.

--- a/Paladin Injector/Paladin Injector.vcxproj
+++ b/Paladin Injector/Paladin Injector.vcxproj
@@ -143,12 +143,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Injector Source\Application\debug.cpp" />
     <ClCompile Include="Injector Source\Application\global.cpp" />
     <ClCompile Include="Injector Source\Application\helper.cpp" />
     <ClCompile Include="Injector Source\Application\inject.cpp" />
     <ClCompile Include="Injector Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Injector Source\Application\debug.h" />
     <ClInclude Include="Injector Source\Application\global.h" />
     <ClInclude Include="Injector Source\Application\helper.h" />
     <ClInclude Include="Injector Source\Application\inject.h" />
