--- a/Paladin Injector/Paladin Injector.vcxproj.filters
+++ b/Paladin Injector/Paladin Injector.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Injector Source\Application\inject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Injector Source\Application\debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Injector Source\main.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Injector Source\Application\inject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Injector Source\Application\debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
