Added Driver Project to Solution and Started File Naming Update

--- a/Solutions/Paladin Extensions/PE CSGO/PE CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PE CSGO/PE CSGO.vcxproj
@@ -88,10 +88,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="DllMain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main.hpp" />
+    <ClInclude Include="DllMain.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
