--- a/Solutions/Paladin Extensions/PE Loader/PE Loader.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PE Loader/PE Loader.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="asd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main.hpp">
+    <ClInclude Include="asd.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
