--- a/Solutions/Paladin Extensions/PE Loader/PE Loader.vcxproj
+++ b/Solutions/Paladin Extensions/PE Loader/PE Loader.vcxproj
@@ -51,8 +51,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)../../Dependencies/Include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)../../Dependencies/Lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
