--- a/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Application\Information\Configuration.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Application\General.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Debug.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Application\Information\Configuration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\General.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
