--- a/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClInclude Include="Application\Information\Configuration.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Application\General.hpp">
+    <ClInclude Include="Application\Utilities.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -65,7 +65,7 @@
     <ClCompile Include="Application\Information\Configuration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Application\General.cpp">
+    <ClCompile Include="Application\Utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
