--- a/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Application\Utilities.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Application\Input.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Debug.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Application\Utilities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\Input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
