--- a/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj.filters
@@ -75,4 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Application\Debug.tpp" />
+    <None Include="Application\Utilities.tpp" />
+    <None Include="Security\Encryption.tpp" />
+  </ItemGroup>
 </Project>
