--- a/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj
+++ b/Solutions/Paladin Extensions/PE Framework/PE Framework.vcxproj
@@ -104,6 +104,9 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib>
+      <AdditionalDependencies>d3d9.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
