--- a/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj.filters
@@ -27,27 +27,27 @@
     <ClInclude Include="Inclusions.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Application\Debug.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Application\Input Manager.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Security\Encryption.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Drawing\Render.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Drawing\User Interface.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Application\File Manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Drawing\Render Manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\Debug Manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Security\Encryption Manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Utilities.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\Debug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Application\Input Manager.cpp">
@@ -56,19 +56,25 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Drawing\Render.cpp">
+    <ClCompile Include="Drawing\User Interface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Drawing\User Interface.cpp">
+    <ClCompile Include="Application\File Manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Drawing\Render Manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\Debug Manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Application\Utilities.inl" />
-    <None Include="Application\Debug.inl">
+    <None Include="Application\Debug Manager.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="Security\Encryption.inl">
+    <None Include="Security\Encryption Manager.inl">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
