--- a/Solutions/Paladin Extensions Test/PE Framework/PE Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions Test/PE Framework/PE Framework.vcxproj.filters
@@ -79,5 +79,6 @@
     <None Include="Application\Debug.tpp" />
     <None Include="Application\Utilities.tpp" />
     <None Include="Security\Encryption.tpp" />
+    <None Include="Drawing\User Interface.tpp" />
   </ItemGroup>
 </Project>
