--- a/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj.filters
@@ -42,7 +42,7 @@
     <ClInclude Include="Drawing\Render Engine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Application\Utilities.hpp">
+    <ClInclude Include="Application\Tools.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -65,7 +65,7 @@
     <ClCompile Include="Drawing\Render Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Application\Utilities.cpp">
+    <ClCompile Include="Application\Tools.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -76,9 +76,9 @@
     <None Include="Application\Debug.inl">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="Application\Utilities.inl" />
     <None Include="Drawing\User Interface.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="Application\Tools.inl" />
   </ItemGroup>
 </Project>
