--- a/Solutions/Paladin Extensions/PX Manager/PX Manager.vcxproj
+++ b/Solutions/Paladin Extensions/PX Manager/PX Manager.vcxproj
@@ -97,6 +97,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
+      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
