--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,19 @@
+TestResult.xml
+dlldata.c
+project.lock.json
+
+**/desktop.ini
+[Bb]uild[Ll]og.*
+
+$tf/
+[Tt]est[Rr]esult*/
+_ReSharper*/
+
 *.suo
 *.userosscache
 *.sln.docstates
 *.userprefs
-[Oo]ld/
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-bld/
-[Bb]in/
-[Oo]bj/
-.vs/
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
 *.VisualState.xml
-TestResult.xml
-[Dd]ebugPS/
-[Rr]eleasePS/
-dlldata.c
-project.lock.json
-artifacts/
 *_i.c
 *_p.c
 *_i.h
@@ -42,11 +34,10 @@ artifacts/
 *.log
 *.vspscc
 *.vssscc
-.builds
+*.builds
 *.pidb
 *.svclog
 *.scc
-ipch/
 *.aps
 *.ncb
 *.opendb
@@ -57,9 +48,22 @@ ipch/
 *.vsp
 *.vspx
 *.sap
-$tf/
 *.gpState
-_ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
-**/desktop.ini
+
+[Oo]ld/
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+[Bb]in/
+[Oo]bj/
+[Dd]ebugPS/
+[Rr]eleasePS/
+artifacts/
+x64/
+x86/
+bld/
+.vs/
+ipch/
