--- a/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj
+++ b/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj
@@ -169,7 +169,7 @@
     <ClInclude Include="PX Framework.hpp" />
     <ClInclude Include="Security\Connectivity.hpp" />
     <ClInclude Include="Security\Cryptography.hpp" />
-    <ClInclude Include="Security\Information.hpp" />
+    <ClInclude Include="Security\System Information.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application\Debug.cpp" />
@@ -181,7 +181,7 @@
     <ClCompile Include="Drawing\User Interface.cpp" />
     <ClCompile Include="Security\Connectivity.cpp" />
     <ClCompile Include="Security\Cryptography.cpp" />
-    <ClCompile Include="Security\Information.cpp" />
+    <ClCompile Include="Security\System Information.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Application\Debug.inl" />
